chore: Stop blackhole displaying on small screens

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -129,3 +129,9 @@ nav a span {
 	box-shadow: 0px 0px 50px 5px var(--white);
 }
 
+@media only screen and (max-width: 1100px) and (max-height: 650px), (max-width: 600px) and (max-height: 900px) {
+	#black-hole {
+		display: none;
+	}
+}
+
